agregando opciones en ul li

--- a/ejemplo2.html
+++ b/ejemplo2.html
@@ -11,6 +11,7 @@
         <ul class="galeria">
             <li>hola</li>
             <li>que tal</li>
+            <li>esta vez si cambiamos</li>
         </ul>
     </section>
 </body>
